fixes: find bar cropping

--- a/src/user-chrome/components/_findbar.scss
+++ b/src/user-chrome/components/_findbar.scss
@@ -240,7 +240,7 @@ $-checkbox-selectors: (
 
 .browserContainer>findbar {
   position: absolute !important;
-  margin: -4px 0 0 0 !important;
+  margin: 0px 0 0 0 !important;
   align-items: center !important;
 }
 
